[metadata]
name = devcapstone
version = 0.1.0
description = Development Capstone Project

[tool:pytest]
addopts = -v --tb=short
python_files = test_*.py

[nosetests]
verbosity=2
with-coverage=1
cover-package=src
cover-html=1

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
fail_under = 70

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,**pycache**,.venv,venv,build,dist

[pylint]
disable = C0114,C0115,C0116
max-line-length = 88
